@@ -73,6 +73,7 @@ static timings_t base_timings[] = {
   { 3546900, 1773400, 24, 128, 32, 40, 48, 192, 48, 24, 14336 }, /* Scorpion */
   { 3546900, 1773400, 24, 128, 24, 52, 48, 192, 48, 23, 14362 }, /* +3e */
   { 3500000, 1750000, 24, 128, 24, 48, 47, 192, 48, 25, 14336 }, /* SE */
+  { 3528000, 1764000, 24, 128, 24, 48, 24, 192, 25, 21,  9184 }, /* TS2068 */
 };
 
 libspectrum_dword
