@@ -289,3 +289,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 	 (part of patch #1085429) (Gergely Szasz).
 20050102 libspectrum.h.in,microdrive.c: variable length microdrive cartridge
 	 handling (rest of patch #1085429) (Gergely Szasz).
+20050102 libspectrum.{c,h.in},sna.c,szx.c,timings.c,z80.c: TS2068 support
+	 (patch #1080531) (Fred).
